refactor(unpack): 금전 관련 필드 타입을 Double에서 BigDecimal로 리팩토링
부동소수점 오차를 방지하고 정확한 금액 계산 및 통화 표현을 위해
금액/단가 필드 타입을 Double에서 BigDecimal로 변경합니다.

- UnpackItemDto: amount, pricein, priceout, oldPricein 필드 타입을 Double -> BigDecimal로 변경
- ReaderUnpack: 엑셀 셀 수치 추출 로직을 BigDecimal 정밀 파싱 기반으로 교체 및 수식 셀 지원
- ReadExcelViewModel: 엑셀 데이터 파싱 및 서버 전송 전 총금액/항목금액 계산 로직을 BigDecimal 정밀 연산으로 변경
- TableColumnUtil: editable 셀에서도 통화 기호($)가 유지되도록 BigDecimalCurrencyStringConverter 구현 및 적용